--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "chai-enzyme": "^0.4.0",
+    "chai-immutable": "^1.5.4",
     "cheerio": "^0.20.0",
     "codecov": "^1.0.1",
     "enzyme": "^2.0.0",
